--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ httplib2==0.19.0
 idna==2.10
 oauthlib==3.1.0
 pefile==2019.4.18
-Pillow==8.0.1
+Pillow>=8.1.1
 protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -29,4 +29,4 @@ requests-oauthlib==1.3.0
 rsa==4.6
 six==1.15.0
 uritemplate==3.0.1
-urllib3==1.26.2
+urllib3>=1.26.4
